-horizontal overflow fixed, reason is aos. -pricing card height bug, resizing container by hover -rounded img have all the same size now -reduced padding for index.html

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -350,6 +350,7 @@ header.masthead .masthead-content .masthead-subheading {
 
 .body-wrapper {
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .main-content {
@@ -366,6 +367,10 @@ header.masthead .masthead-content .masthead-subheading {
 
 .grey-text {
   color: lightgrey;
+}
+
+img.rounded-circle {
+  width: 444px;
 }
 
 .rounded-square {
@@ -538,6 +543,10 @@ section.pricing {
   padding: 1rem;
   opacity: 0.7;
   transition: all 0.2s;
+}
+
+.pricing-card-container-height {
+  min-height: 29rem;
 }
 
 /* Hover Effects on Card */
